minor alignment fix for mediumLogos view style

--- a/MMM-MyScoreboard.css
+++ b/MMM-MyScoreboard.css
@@ -166,7 +166,7 @@
 }
 
 .MMM-MyScoreboard .box-score.mediumLogos .score {
-  top: 10px;
+  top: 9px;
 }
 .MMM-MyScoreboard .box-score.mediumLogos .score.visitor {
   left: 42px;
